versioned_docs/version-2026.1.1/professor/leandro_luiz_borges.mdx


---
sidebar_label: 'Leandro Luiz Borges'
---

import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Leandro Luiz Borges",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Bioestatística - 487",
          "size": 2,
          "teachers": [
            "Leandro Luiz Borges"
          ],
          "classroom": "sala_8-2",
          "students": [
            "BIO_ESPECIAL_1"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Biologia III - 2453",
          "size": 2,
          "teachers": [
            "Leandro Luiz Borges"
          ],
          "classroom": "sala_14-2",
          "students": [
            "COM2024"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Biologia I - 2324",
          "size": 2,
          "teachers": [
            "Leandro Luiz Borges"
          ],
          "classroom": "",
          "students": [
            "COM2026"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Biologia III - 1241",
          "size": 2,
          "teachers": [
            "Leandro Luiz Borges"
          ],
          "classroom": "sala_16-2",
          "students": [
            "IIW2024A"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Leandro Luiz Borges

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

